@@ -11,3 +11,23 @@ Datastar dashboard (`fh-datastar-view`): dashboards authored in
   Actions from [home-addon/Dockerfile](Dockerfile). Releasing = merging a
   `version:` bump in [config.yaml](config.yaml) to main; the workflow builds,
   publishes, and creates the matching `vX.Y.Z` tag.
+- **GraalJS**: the image carries a GraalVM JavaScript isolate library, Oracle's
+  build, under the [GraalVM Free Terms and Conditions](https://www.oracle.com/downloads/licenses/graal-free-license.html)
+  — free to redistribute bundled in a product as long as nothing is charged
+  for it, which is what this add-on does. The community build is a drop-in
+  replacement under MIT/UPL at 3–4× the native memory, if the terms are ever
+  unwanted. [graalvm-js.version](graalvm-js.version) is the single version
+  string: `build.sbt` resolves the polyglot jars from it and the Dockerfile
+  fetches the matching library, because the two halves drift silently.
+
+Is the library loadable in the built image?
+
+```sh
+docker run --rm --entrypoint java ghcr.io/perok/fh-dashboard:latest \
+  --enable-native-access=ALL-UNNAMED \
+  -cp /opt/fh-dashboard.jar fh.view.runtime.JsIsolateCheck
+```
+
+It runs a line of JavaScript through the isolate and prints RSS before and
+after, which is the only way to see memory a foreign library allocates
+outside the JVM heap. CI runs it on both architectures.
